--- a/pages/gerenciar_adm.html
+++ b/pages/gerenciar_adm.html
@@ -116,7 +116,8 @@
                                 </fieldset>
                                 <fieldset id="bloco">
                                     <div class="dados">
-                                        <label>Usuário:</label>
+                                        <label id="labelExplicacao">Clique em algum adm na tabela para que suas informações completem os campos abaixo.</label>
+                                        <label>Nome:</label>
                                         <input type="text" name="nome_usuario" maxlength="40" required />
                                     </div>
                                 </fieldset>
