--- a/pages/gerenciar_usuario.html
+++ b/pages/gerenciar_usuario.html
@@ -107,6 +107,7 @@
                                 </fieldset>
                                 <fieldset id="bloco">
                                     <div class="dados">
+                                        <label id="labelExplicacao">Clique em algum usuário na tabela para que suas informações completem os campos abaixo.</label>
                                         <label>Nome:</label>
                                         <input type="text" name="nome_user" maxlength="40" required />
                                     </div>
